# itmo_hw

DA/: Lab-2.ipynb  Lab-3.ipynb  Lab-4.ipynb  Lab1_Kalinichev_ALexander_M3336.ipynb  lab.ipynb  lab5.ipynb  lab8.ipynb
MT/MTLab-2/: README.md  dotsource.dot
MT/MTLab-2/src/: Main.java
MT/lab1/: task1.perl  task10.perl  task11.perl  task12.perl  task13.perl  task14.perl  task15.perl  task16.perl  task17.perl  task18.perl  task19.perl  task2.perl  task20.perl  task21.perl  task22.perl  task23.perl  task3.perl  task4.perl  task5.perl  task6.perl  task7.perl  task8.perl  task9.txt
MetOpt/metopt_lab1/: package.json  pom.xml
MetOpt/metopt_lab3-master/: pom.xml
MetOpt/metopt_lab4/: .gitignore  README.md  pom.xml
dm/lab_proizv/: B.java  C.java
fp/fp0/: ChangeLog.md  README.md  fp0.cabal  package.yaml
fp/hw2/: hw2.cabal
fp/hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs
fp/hw3/: .stylish-haskell.yaml  LICENSE  README.md  hw3.cabal
fp/hw3/app/: Main.hs
fp/hw3/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
frontend/: js1.js  js2.js  js3.js  js4.js  js5.js  js6.js
java/java-advanced/: primes.pl  tree-map.pl
mpp/linked-list-set-posledniypoet/: pom.xml
os/LAB6/: 1.1.bat  1.2.bat  2.1.bat  2.3.bat  2.5.txt  3.1.bat  3.2.bat  3.3.bat  4.1.bat  DRIVERS.txt  SDRIVERS.txt  disks.txt  memory.txt  version.txt
os/mkdir lab1/: dop.sh  emails.lst  script1.sh  script10.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh  script8.sh  script9.sh
os/mkdir lab2/: 2_1.txt  2_2.txt  2_4.txt  2_5.txt  script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh
os/mkdir lab4/: backup.sh  rmtrash.sh  test.sh  untrash.sh  upback.sh
os/mkdir lab5/: freemem(t).ods  mem2.bash  newmem.bash  newmemK.bash  rep.txt  script.bash  отчёт.odt
os/mkdirlab3/: dop.sh  script1.sh  script2.sh  script3.sh  script4.sh  script4mult.sh  script5.sh  script5gen.sh  script5obr.sh  script6.sh  script6gen.sh
web/lesson6/: pom.xml
(+271 files in other folders)
