name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             GPL
license-file:        LICENSE
author:              Alexandr Kalinichev
maintainer:          Alexandr Kalinichev
copyright:           Alexandr Kalinichev 2021

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW2.T1, HW2.T2, HW2.T3, HW2.T4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5,
                       scientific
  default-language:    Haskell2010